# object_recognition

./: CMakeLists.txt  README.md  ism_command.sh  package.xml  package.xml~
include/object_recognition/: object_recognizer.h
launch/: ORK.launch  find_stool_coke.launch  object_recognizer_test1.launch  object_recognizer_test2.launch
src/: ICP.cpp  find_plane_pcd_file.cpp  global_hypothesis_verification.cpp  object_recognition_kitchen.cpp  object_recognize_main.cpp  object_recognizer.cpp  pcd_edit_tool.cpp  pcl_utils.cpp
