<?xml version="1.0"?>
<package>
  <name>object_recognition</name>
  <version>0.0.0</version>
  <description>The object_recognition package</description>
  

  <maintainer email="anag2@ncsu.edu">Arunava Nag</maintainer>

  
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>roscpp</build_depend>
<build_depend>eigen</build_depend>
<build_depend>pcl_ros</build_depend>
<build_depend>pcl_conversions</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>tf</build_depend>
<build_depend>geometery_msgs</build_depend>
<build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
<run_depend>eigen</run_depend>
<run_depend>pcl_ros</run_depend>
<run_depend>pcl_conversions</run_depend>
<run_depend>sensor_msgs</run_depend>
<run_depend>tf</run_depend>
<run_depend>geometery_msgs</run_depend>
<run_depend>std_msgs</run_depend>
 
  <export>
  
  </export>
</package>
    
